--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<!-- saved from url=(0034)https://people.emich.edu/hmohamme/ -->
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <meta charset="utf-8" />
-    <title>Jane Wilson</title>
+    <title>Justin Dang</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./images/myIcon.ico">
+    <link rel="icon" href="./images/ban-removebg-preview.png">
 </head>
 
 <body data-gr-c-s-loaded="true" style="">
     <div id="wrapper">
         <div id="header">
-            <a href="index.html" class="button">Jane Wilson</a>
+            <a href="index.html" class="button">Justin Dang</a>
             <a href="Course%20Projects.html" class="button">Course Projects</a>
             <a href="hobbies.html" class="button">Hobbies</a>
-            <a href="Project2.html" class="button">Project 2 Name</a>
-            <a href="Project3.html" class="button">Project 3 Name</a>
+
         </div>
         <!--end of header div-->
         <div id="content">
@@ -24,14 +22,14 @@
             <div id="rightEdge"> &nbsp; </div>
 
             <div id="pageContent">
-                <img src="./images/Jane.png" style="float: right; width: 200px; margin-top: 10px">
-                <h2> Jane Wilson</h2>
-                <p> (248) 555-1234 | jwilson@oakland.edu |
+                <img src="./images/irl pfp.jpeg" style="float: right; width: 200px; margin-top: 10px">
+                <h2> Justin Dang</h2>
+                <p> (248) 123-1234 | jdang3@oakland.edu |
 
-                    <a href="https://www.linkedIn.com/in/janewilson" target="_blank">LinkedIn.com/in/janewilson | </a>
+                    <a href="https://www.linkedin.com/in/justin-d-5706a0244/" target="_blank">LinkedIn.com/in/justin-dang | </a>
 
 
-                    <a href="https://janewilson.github.io/Jane WilsonCV" target="_blank">Website</a><br>
+                    <a href="https://justindang.github.io/Justin-Dang-CV" target="_blank">Website</a><br>
 
                     School of Engineering and Computer Science<br>
 
@@ -40,113 +38,96 @@
 
 
                 </p>
-                <h2> CAREER FOCUS: Software Engineer / Mobile Application Developer</h2>
-                <p>Aspiring Software Engineer / Mobile Application Developer with strong skills in Java, Python, and
-                    Android development. Motivated junior Computer Science student passionate about problem solving,
-                    teamwork, and building creative solutions. Seeking a Summer 2025 Software Engineering Internship
-                    where I can apply my programming knowledge, teamwork skills, and creativity to contribute to realworld technology projects.</p>
+                <h2> CAREER FOCUS: Software Engineer</h2>
+                <p>Aspiring Software Engineer with experience in Java, Python, JavaScript, C++, C#, SQL, and front-end development. Motivated senior Computer Science
+                     student passionate about problem solving,
+                    teamwork, and building creative solutions. Seeking a Summer 2026 Software Engineering Full-Time Offer
+                    where I can work.</p>
                 <h2> Education</h2>
-                Bachelor of Science in Computer Science-GPA: 3.74/4.0<br>
+                Bachelor of Science in Information Technology-GPA: 3.89/4.0<br>
                 Oakland University, Rochester, MI<br>
-                Expected Graduation: May 2027
+                Expected Graduation: May 2026
 
 
 
-                <h2> Engineering Course Projects:</h2>
+                <h2> CSI Projects:</h2>
                 <ul>
-                    <h3>Mobile Grocery List App (CSI 4230-Mobile App Development)</h3>
-                    <li>Built an Android app that allows users to add, edit, and categorize grocery items.</li>
+                    <h3>Mutgrapher (CSI 4370 - Software Verification/Testing)</h3>
+                    <li>Developed a mutation testing platform leveraging Flask and MutPy for Python unit testing coverage analysis. </li>
                     <li>
-                        Implemented SQLite for persistent storage and integrated barcode scanning API.</li>
-                    <li>
-                        Improved user efficiency by adding reminders and a clean, intuitive UI</li>
-
-
+                        Implemented interactive data visualization tools using Statsfic and for control flow graph (CFG) analysis. 
+                        Enabled users to analyze, test, and download mutation reports for Python code.  </li>
+            
                 </ul>
 
                 <ul>
-                    <h3>Movie Recommendation System (CSI 3450 – Database Systems)</h3>
+                    <h3>Wallet Wizard (CIS 1512 - Software Engineering)</h3>
 
-                    <li>Designed and implemented a relational database in MySQL for storing user ratings and movie
-                        metadata.</li>
-                    <li> Developed Python scripts to query data and recommend movies using collaborative filtering.</li>
+                    <li>Developed a web-based personal finance tracker (“Wallet Wizard”) that allows users to input income, create budgets, 
+                        allocate funds, and view spending through charts and multiple interactive pages.</li>
+                    <li>Built the front-end user interface using HTML and JavaScript, creating navigation, forms,
+                         and financial visualizations while integrating with a Python-based backend</li>
 
-                    <li>Presented results with a web-based interface built using Flask.
+                    <li>Worked in an Agile team environment using GitHub, Scrum roles, and weekly sprint meetings 
+                        to plan features, track tasks, and deliver a complete software engineering project.
                     </li>
                 </ul>
 
                 <ul>
-                    <h3>Tea Time Magazine - Crafting & DIY Web Application (Front-End)</h3>
+                    <h3>Budget Buddy - A finance tracking web application (CSI - 2999)</h3>
 
-                    <li>Built a responsive magazine-style homepage with category tiles (Sewing, Knitting, Embroidery,Origami, Jewelry, Drawing), search, “most recent” sort, and pagination—as shown in the
-                        attached screenshot.
+                    <li>Developed a responsive web application that allows users (company owners) to track their income, expenses, and savings goals.</li>
                     </li>
                     <li>
-                        Implemented reusable article-card components and category filters using HTML5, CSS3
-                        (Flexbox/Grid), JavaScript; organized content via JSON and lightweight utilities.
+                        Implemented front-end features using HTML, CSS, and JavaScript to create interactive forms, charts, and navigation menus.
                     </li>
                     <li>
-                        Optimized for accessibility and mobile: semantic markup, ARIA labels, keyboard focus states,
-                        and high-contrast color tokens; tested across modern browsers.
+                        Collaborated with a team of 5 students using GitHub for version control and Agile methodologies to plan and deliver the project.
                     </li>
                 </ul>
-
-
 
                 <br>
                 <h2>Relevant Experience:</h2>
                 <ul>
-                    <h3>IT Help Desk Assistant | Oakland University, Rochester, MI</h3>
-                    Sept 2024 - Present
+                    <h3>System Business Analyst Co-op | Nexteer Automotive, Auburn Hills, MI</h3>
+                    Oct 2024 - Present
 
-                    <li>Provided technical support to students and faculty for Windows, macOS, and Linux systems.</li>
-                    <li>Assisted with software installations, troubleshooting networks, and resetting accounts.</li>
-                    <li>Gained hands-on experience with ticketing systems and customer support best practices.</li>
+                    <li>Assisting in email communication and providing support for the Intelex system to aid with data management and user queries </li>
+                    <li>Collaborating in Agile stand-ups, sprint planning, and Hackathon events, contributing
+                         solutions that aligned with business and IT digital transformation initiatives </li>
+                    <li>Contributing to the transition of the Eleos application codebase from Python to TypeScript by 
+                        documenting code functionality, adding in-line comments, and creating technical explanations for future engineers </li>
                 </ul>
                 <ul>
-                    <h3>Participant-IEEE Student Conference | Detroit, MI</h3>
-                    March 2025
+                    <h3>Control Software Engineer Intern | Sterling Heights, MI</h3>
+                    May 2024 - Aug 2024
 
-                    <li>Presented a team research poster on database-driven applications.</li>
-                    <li>Networked with industry professionals and gained exposure to current trends in software
-                        engineering.</li>
-                    <li>Enhanced technical communication and presentation skills.
-                </ul>
-                <ul>
-                    <h3>Student Presenter-Oakland University Project Expo | Rochester, MI</h3>
-                    April 2025
-
-                    <li>Showcased Mobile Grocery List App to faculty, peers, and industry judges.</li>
-                    <li>Demonstrated app features, including categorized list management and SQLite database</li>
-                    integration.
-                    <li>Received positive feedback on design and functionality, strengthening professional
-                        presentation skills.</li>
+                    <li>Engineered and programmed Rockwell Logix 5000 PLCs, FactoryTalk Optix Studio (C#), and SQL databases to automate control processes. </li>
+                    <li>Conducted R&D on PLC and HMI technologies, gaining hands-on experience in control logic development and troubleshooting and debugging software issues </li>
+                    <li>Developed and tested control software for various automated systems, ensuring seamless integration with hardware components  </li>
                 </ul>
 
                 <h2>Other Professional Experience:</h2>
                 <ul>
-                    <h3>Math & Coding Tutor | Rochester Hills, MI</h3>
-                    Jan 2023 – Aug 2024
+                    <h3>Coding Tutor | Sterling Heights, MI</h3>
+                    Jan 2026 - Present
 
-                    <li>Tutored high school students in Python, Java, and Algebra.</li>
-                    <li>Created personalized lesson plans and coding exercises to reinforce problem-solving skills.</li>
-                    <li>Helped students improve average grades by one letter grade.</li>
+                    <li>Tutored college students in Java, and C++.</li>
+                    <li>Created lectures in layman terms for technical concepts.</li>
+                    <li>Helped students catch up in class.</li>
                 </ul>
                 <ul>
                     <h3>Technical Skills:</h3>
 
-                    <li>Programming Languages: Java, Python, C++, JavaScript, SQL, HTML/CSS</li>
-                    <li>Design Skills: Responsive Design, Accessibility (WCAG), UX Wireframing. </li>
-                    <li>Software & Tools: Android Studio, Git/GitHub, Eclipse, VS Code, MySQL, Figma </li>
-                    <li>Operating Systems: Windows, macOS, Linux </li>
+                    <li>Programming Languages: Java, Python, C++, JavaScript, SQL, HTML/CSS, C#</li>
+                    <li>Software & Tools: Apache NetBeans, Git/GitHub, VS Code, SQMS, Figma, Trello, Microsoft Suite</li>
+                    <li>Operating Systems: Windows, Linux </li>
                 </ul>
                 <ul>
-                    <h3>Activities & Achievements:</h3>
+                    <h3>Academic Achievements:</h3>
+                    <li>Dean's List (every semester at MCC)</li>
+                    <li>President's List</li>
 
-                    <li>Member, Women in Computing (OU chapter) - organized coding workshops for high school
-                        girls</li>
-                    <li>Dean's List, 4 consecutive semesters</li>
-                    <li>Hackathon Participant - OU Hack Day 2024 (team project: "EcoTrack" app for recycling)</li>
                 </ul>
 
             </div>
@@ -156,7 +137,7 @@
         <!--end of content div -->
         <br>
         <div id="footer">
-            <p>last updated: 2025</p>
+            <p>last updated: 2026</p>
         </div>
         <!--footer Div -->
     </div>
